# rustpotter-wasm

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
tools/: build-web-debug.sh  build-web-slim.sh  build-web.sh  publish-web-slim.sh  publish-web.sh
