[package]
name = "rustpotter-wasm"
version = "0.9.1"
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A free and open source wake word spotter forged in rust."
repository = "https://github.com/GiviMAD/rustpotter-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.63"
rustpotter = "0.9.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
