[package]
name = "rustpotter-wasm"
version = "3.0.0-beta.7"
authors = ["Miguel Álvarez Díez <miguelwork92@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Wasm-pack builder for Rustpotter, an open source wakeword spotter forged in rust."
repository = "https://github.com/GiviMAD/rustpotter-wasm"
exclude = [ "tools/**" ]
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["build_refs"]
wee_alloc = ["dep:wee_alloc"]
build_refs = []
log = ["console_error_panic_hook","dep:log","dep:wasm-logger"]
[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
log = { version = "0.4.6", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
wasm-bindgen = "0.2.63"
rustpotter = { version = "3.0.0-beta.7", default-features = false }
# set transitive dep feature for js compatible build
getrandom = { version = "0.2", features = ["js"] }

wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
codegen-units = 1
